--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tp7",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/benzouynahk-beep/tp",
+"homepage": "https://benzouynahk-beep.github.io/tp",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
